--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <main>
         <div class="container">
+            <h2>CONSTRUCTOR</h2>
+            <h2>RESULT</h2>
             <div class="box" id="constructor"></div>
             <div class="box" id="target"></div>
         </div>
